[package]
name = "guardrail"
version = "0.7.0"
edition = "2021"
description = "Transparent OpenAI chat-completions proxy with tool-call guardrails"
license = "MIT"

[[bin]]
name = "guardrail"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
bytes = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
wiremock = "0.6"
